# shared

./: .classpath  .gitignore  .project  .pydevproject  Makefile  _config.yml  build.xml  index.html  license.txt  test.pl  test.py
_layouts/: default.html
doxydoc/: annotated.html  classArrayPinHandler-members.html  classArrayPinHandler.html  classBenchmark-members.html  classBenchmark.html  classBuildAndTest-members.html  classBuildAndTest.html  classCleanupHandler-members.html  classCleanupHandler.html  classCommon-members.html  classCommon.html  classDimensionOps-members.html  classDimensionOps.html  classElementOps-members.html  classElementOps.html  classIndexOps-members.html  classIndexOps.html  classLibrary-members.html  classLibrary.html  classLinearAlgebraOps-members.html  classLinearAlgebraOps.html  classMallocHandler-members.html  classMallocHandler.html  classMappingOps-members.html  classMappingOps.html  classMappingResult-members.html  classMappingResult.html  classMatrixOps-members.html  classMatrixOps.html  classMergeResult-members.html  classMergeResult.html  classMonitorHandler-members.html  classMonitorHandler.html  classNativeArrayKernel-members.html  classNativeArrayKernel.html  classNativeImageKernel-members.html  classNativeImageKernel.html  classPlan-members.html  classPlan.html  classSparseOps-members.html  (+29 more)
doxydoc/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_69.js  all_6a.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_69.js  classes_6a.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_70.js  classes_73.js  enums_65.js  enums_6a.js  enums_72.js  enumvalues_62.js  enumvalues_63.js  enumvalues_64.js  enumvalues_69.js  enumvalues_6f.js  enumvalues_70.js  enumvalues_72.js  enumvalues_73.js  functions_61.js  functions_63.js  functions_64.js  functions_65.js  (+26 more)
javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
javadoc/font/: package-frame.html  package-summary.html  package-tree.html  package-use.html
javadoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-23.html  index-24.html  index-25.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
javadoc/lib/: package-frame.html  package-summary.html  package-tree.html  package-use.html
javadoc/libx/: package-frame.html  package-summary.html  package-tree.html  package-use.html
javadoc/org/shared/: Constants.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
javadoc/org/sharedx/: package-frame.html  package-summary.html  package-tree.html  package-use.html
license/: license_BSD.txt  license_JAMA.txt
native/: CMakeLists.txt  Makefile
native/include/jni/: JNIWrap.hpp  JniWrap.hpp
native/include/shared/: Bindings.hpp  Common.hpp  DimensionOps.hpp  Doxygen.hpp  ElementOps.hpp  IndexOps.hpp  JNIHeadersWrap.hpp  JniHeadersWrap.hpp  LinearAlgebraOps.hpp  MappingOps.hpp  MatrixOps.hpp  NativeArrayKernel.hpp  NativeImageKernel.hpp  SparseOps.hpp
native/include/shared_cl/: BindingsCl.hpp  Bindings_CL.hpp
native/include/shared_common/: BindingsCommon.hpp  Library.hpp
native/include/sharedx/: Benchmark.hpp  BindingsX.hpp  Extensions.hpp  JNIHeadersXWrap.hpp  JniHeadersXWrap.hpp  Plan.hpp
native/include/win32/: BuildAndTest.hpp
native/src/shared/: Bindings.cpp  Common.cpp  DimensionOps.cpp  DimensionOpsDimension.cpp  DimensionOpsIndex.cpp  DimensionOpsReduce.cpp  DimensionOps_dimension.cpp  DimensionOps_index.cpp  DimensionOps_reduce.cpp  ElementOps.cpp  IndexOps.cpp  LinearAlgebraOpsEigs.cpp  LinearAlgebraOpsLu.cpp  LinearAlgebraOpsSVD.cpp  LinearAlgebraOpsSvd.cpp  LinearAlgebraOps_eigs.cpp  LinearAlgebraOps_lu.cpp  LinearAlgebraOps_svd.cpp  MappingOps.cpp  MappingOpsMap.cpp  MappingOpsSlice.cpp  MappingOps_map.cpp  MappingOps_slice.cpp  MatrixOps.cpp  NativeArrayKernel.cpp  NativeImageKernel.cpp  SparseOps.cpp  SparseOpsInsert.cpp  SparseOpsSlice.cpp  SparseOps_insert.cpp  SparseOps_slice.cpp
native/src/shared_cl/: BindingsCL.cpp  BindingsCl.cpp  Bindings_CL.cpp
native/src/shared_common/: BindingsCommon.cpp  Library.cpp
native/src/sharedx/: Benchmark.cpp  BindingsX.cpp  Extensions.cpp  Plan.cpp
native/src/win32/: BuildAndTest.cpp
src/font/: package-info.java
src/lib/: package-info.java
src/org/shared/: Constants.java  log4j.xml  package-info.java
src/shared/: Constants.java  log4j.xml  package-info.java  project.properties
src/shared/array/: AbstractArray.java  AbstractComplexArray.java  AbstractRealArray.java  Array.java  ArrayBase.java  ComplexArray.java  IntegerArray.java  Matrix.java  ObjectArray.java  ProtoArray.java  RealArray.java  package-info.java
src/shared/event/: EnumStatus.java  EnumType.java  Event.java  EventProcessor.java  Handler.java  Processor.java  Source.java  SourceLocal.java  SourceRemote.java  StateProcessor.java  StateTable.java  Transitions.java  XMLEvent.java  XmlEvent.java  package-info.java
src/shared/fft/: Cacheable.java  ConvolutionCache.java  FFTCache.java  FFTOps.java  FFTService.java  FftCache.java  FftOps.java  (+6 more)
src_extensions/libx/: package-info.java
src_extensions/sharedx/: package-info.java
(+1141 files in other folders)
